--- a/app/src/main/res/navigation/stock_graph.xml
+++ b/app/src/main/res/navigation/stock_graph.xml
@@ -2,9 +2,9 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/stock_graph"
-    app:startDestination="@id/empty_screen">
+    app:startDestination="@id/stock_screen">
 
     <fragment
-        android:id="@+id/empty_screen"
-        android:name="com.bav.core.EmptyScreen" />
+        android:id="@+id/stock_screen"
+        android:name="com.bav.wbapp.stock.StockScreen" />
 </navigation>
