--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="tangerine_two">#FFF29200</color>
+    <color name="tangerine_two_disable">#FF804F05</color>
     <color name="cool_grey">#FF9A9AA1</color>
 </resources>
