--- a/core/src/main/res/values/themes.xml
+++ b/core/src/main/res/values/themes.xml
@@ -20,17 +20,22 @@
         <item name="android:textColorHint">@color/white</item>
         <item name="android:paddingEnd">@dimen/custom_edit_text_text_size</item>
     </style>
-    <!--Custom Edit Text Title Style-->
-    <style name="Base.Widget.AppCompat.TextView.CustomEditTextTitle" parent="Widget.AppCompat.TextView">
+    
+    <!--TextView Styles-->
+    <style name="Base.Widget.AppCompat.TextView.Grey12" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">@dimen/sp_12</item>
         <item name="android:textColor">@color/cool_grey</item>
     </style>
-    <!--Custom Edit Text ClickableText Style-->
-    <style name="Base.Widget.AppCompat.TextView.CustomEditTextButton" parent="Widget.AppCompat.TextView">
+    <style name="Base.Widget.AppCompat.TextView.Grey14" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">@dimen/sp_14</item>
         <item name="android:textColor">@color/cool_grey</item>
-        <item name="android:gravity">end|center_vertical</item>
-        <item name="android:paddingEnd">@dimen/custom_edit_text_text_padding</item>
+    </style>
+
+    <!--Button Styles-->
+    <style name="Widget.AppCompat.Button.MyRoundedButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/rounded_button_style</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/sp_14</item>
     </style>
 
 </resources>
