--- a/core/src/main/res/values/dimens.xml
+++ b/core/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="dp_46">46dp</dimen>
     <dimen name="dp_56">56dp</dimen>
     <dimen name="dp_100">100dp</dimen>
+    <dimen name="dp_110">110dp</dimen>
     <dimen name="dp_124">124dp</dimen>
     <dimen name="dp_255">255dp</dimen>
 
@@ -15,6 +16,7 @@
     <dimen name="sp_14">14sp</dimen>
     <dimen name="sp_16">16sp</dimen>
     <dimen name="sp_20">20sp</dimen>
+    <dimen name="sp_22">22sp</dimen>
 
     <dimen name="custom_edit_text_text_size">80dp</dimen>
     <dimen name="custom_edit_text_text_padding">5dp</dimen>
