--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -59,7 +59,12 @@
     <fragment
         android:id="@+id/profileScreen"
         android:name="com.bav.wbapp.profile.ProfileScreen"
-        android:label="ProfileScreen" />
+        android:label="ProfileScreen" >
+        <action
+            android:id="@+id/action_profileScreen_to_profileEditScreen"
+            app:destination="@id/profileEditScreen"
+            app:popUpTo="@id/profileScreen"/>
+    </fragment>
     <fragment
         android:id="@+id/restaurantsScreen"
         android:name="com.bav.wbapp.restaurants.RestaurantsScreen"
@@ -73,5 +78,9 @@
     <include app:graph="@navigation/profile_graph" />
     <include app:graph="@navigation/info_graph" />
     <include app:graph="@navigation/history_graph" />
+    <fragment
+        android:id="@+id/profileEditScreen"
+        android:name="com.bav.wbapp.profile.edit.ProfileEditScreen"
+        android:label="ProfileEditScreen"/>
 
 </navigation>
