--- a/core-ui/src/main/res/layout/custom_text.xml
+++ b/core-ui/src/main/res/layout/custom_text.xml
@@ -26,6 +26,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/custom_text_title"
-        style="@style/Base.Widget.AppCompat.TextView.CustomText"
+        style="@style/Base.Widget.AppCompat.TextView.White16"
         tools:text="@string/password"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
