--- a/core/src/main/res/values/themes.xml
+++ b/core/src/main/res/values/themes.xml
@@ -21,7 +21,7 @@
         <item name="android:paddingEnd">@dimen/custom_edit_text_text_size</item>
     </style>
     <!--Custom Text Style-->
-    <style name="Base.Widget.AppCompat.TextView.CustomText" parent="Widget.AppCompat.TextView">
+    <style name="Base.Widget.AppCompat.TextView.White16" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">@dimen/sp_16</item>
         <item name="android:textColor">@color/white</item>
     </style>
