--- a/app/src/main/res/layout/profile_edit_screen.xml
+++ b/app/src/main/res/layout/profile_edit_screen.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black">
 
     <androidx.appcompat.widget.Toolbar
@@ -40,75 +42,103 @@
         android:orientation="vertical"
         app:layout_constraintGuide_begin="@dimen/dp_25" />
 
-    <FrameLayout
-        android:id="@+id/edit_name_container"
+    <include
+        android:id="@+id/edit_name"
+        layout="@layout/custom_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_15"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-        <include
-            android:id="@+id/edit_name"
-            layout="@layout/custom_edit_text"/>
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/edit_last_name_container"
+    <include
+        android:id="@+id/edit_last_name"
+        layout="@layout/custom_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_15"
-        app:layout_constraintTop_toBottomOf="@+id/edit_name_container"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/edit_name" />
 
-        <include
-            android:id="@+id/edit_last_name"
-            layout="@layout/custom_edit_text"/>
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/edit_date_of_birth_container"
+    <include
+        android:id="@+id/edit_date_of_birth"
+        layout="@layout/custom_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_15"
-        app:layout_constraintTop_toBottomOf="@+id/edit_last_name_container"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/edit_last_name" />
 
-        <include
-            android:id="@+id/edit_date_of_birth"
-            layout="@layout/custom_edit_text"/>
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/edit_phone_container"
+    <include
+        android:id="@+id/edit_phone"
+        layout="@layout/custom_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_15"
-        app:layout_constraintTop_toBottomOf="@+id/edit_date_of_birth_container"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/edit_date_of_birth" />
 
-        <include
-            android:id="@+id/edit_phone"
-            layout="@layout/custom_edit_text"/>
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/edit_email_container"
+    <include
+        android:id="@+id/edit_email"
+        layout="@layout/custom_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_15"
-        app:layout_constraintTop_toBottomOf="@+id/edit_phone_container"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/edit_phone" />
 
-        <include
-            android:id="@+id/edit_email"
-            layout="@layout/custom_edit_text"/>
-    </FrameLayout>
+    <ImageView
+        android:id="@+id/edit_password_icon"
+        android:layout_width="@dimen/dp_25"
+        android:layout_height="@dimen/dp_25"
+        android:layout_marginTop="@dimen/dp_25"
+        android:src="@drawable/password_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/edit_email"
+        app:tint="@color/tangerine_two" />
+
+    <CheckBox
+        android:id="@+id/edit_password_check"
+        style="@style/MyCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_12"
+        android:button="@null"
+        android:drawableEnd="@drawable/check_box_arrow"
+        android:drawableTint="@color/white"
+        android:text="@string/edit_password"
+        app:layout_constraintBottom_toBottomOf="@+id/edit_password_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@id/edit_password_icon"
+        app:layout_constraintTop_toTopOf="@+id/edit_password_icon" />
+
+    <include
+        android:id="@+id/edit_password"
+        layout="@layout/custom_edit_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_15"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/edit_password_icon" />
+
+    <include
+        android:id="@+id/confirm_password"
+        layout="@layout/custom_edit_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_15"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/edit_password" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/edit_profile_button"
@@ -119,7 +149,7 @@
         android:text="@string/save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_email_container" />
+        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />
 
     <ProgressBar
         android:id="@+id/loading"
