--- a/app/src/main/res/layout/registration_screen.xml
+++ b/app/src/main/res/layout/registration_screen.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingHorizontal="@dimen/dp_33"
     tools:background="@drawable/background_auth">
 
@@ -17,72 +17,56 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/auth_icon" />
 
-    <FrameLayout
-        android:id="@+id/name_container_reg"
+    <include
+        android:id="@+id/name_reg"
+        layout="@layout/custom_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_46"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_icon">
+        app:layout_constraintTop_toBottomOf="@+id/login_icon" />
 
-        <include
-            android:id="@+id/name_reg"
-            layout="@layout/custom_edit_text" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/phone_container_reg"
+    <include
+        android:id="@+id/phone_reg"
+        layout="@layout/custom_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_23"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name_container_reg">
+        app:layout_constraintTop_toBottomOf="@+id/name_reg" />
 
-        <include
-            android:id="@+id/phone_reg"
-            layout="@layout/custom_edit_text" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/login_container_reg"
+    <include
+        android:id="@+id/login_reg"
+        layout="@layout/custom_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_23"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phone_container_reg">
+        app:layout_constraintTop_toBottomOf="@+id/phone_reg" />
 
-        <include
-            android:id="@+id/login_reg"
-            layout="@layout/custom_edit_text" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/password_container_reg"
+    <include
+        android:id="@+id/password_reg"
+        layout="@layout/custom_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_23"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_container_reg">
-
-        <include
-            android:id="@+id/password_reg"
-            layout="@layout/custom_edit_text" />
-    </FrameLayout>
+        app:layout_constraintTop_toBottomOf="@+id/login_reg" />
 
     <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/personal_data_check"
+        style="@style/MyRadioButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_23"
         android:minWidth="0dp"
         android:minHeight="0dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_container_reg"
-        style="@style/MyRadioButton"/>
+        app:layout_constraintTop_toBottomOf="@+id/password_reg" />
 
     <TextView
         android:id="@+id/personal_data_text"
@@ -102,18 +86,18 @@
         android:layout_width="@dimen/dp_255"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_46"
-        tools:text="@string/registration_bad"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/personal_data_check" />
+        app:layout_constraintTop_toBottomOf="@+id/personal_data_check"
+        tools:text="@string/registration_bad" />
 
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="@dimen/dp_100"
         android:layout_height="@dimen/dp_100"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
