--- a/app/src/main/res/navigation/auth_graph.xml
+++ b/app/src/main/res/navigation/auth_graph.xml
@@ -6,8 +6,8 @@
 
     <fragment
         android:id="@+id/login_screen"
-        android:name="com.bav.wbapp.auth.LoginScreen"
-        android:label="@string/authorization" >
+        android:name="com.bav.wbapp.auth.login.LoginScreen"
+        android:label="@string/authorization">
         <action
             android:id="@+id/action_login_screen_to_registrationScreen"
             app:destination="@id/registration_screen"
@@ -16,7 +16,8 @@
 
     <fragment
         android:id="@+id/registration_screen"
-        android:name="com.bav.wbapp.auth.RegistrationScreen"
-        android:label="@string/registration" />
+        android:name="com.bav.wbapp.auth.registration.RegistrationScreen"
+        android:label="@string/registration">
+    </fragment>
 
 </navigation>
