--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -18,7 +18,12 @@
             app:destination="@id/historyScreen2" />
         <action
             android:id="@+id/action_main_screen_to_profileScreen"
-            app:destination="@id/profileScreen" />
+            app:destination="@id/profileScreen"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            app:popUpTo="@id/main_screen" />
         <action
             android:id="@+id/action_main_screen_to_reviewScreen"
             app:destination="@id/reviewScreen" />
@@ -63,6 +68,10 @@
         <action
             android:id="@+id/action_profileScreen_to_profileEditScreen"
             app:destination="@id/profileEditScreen"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
             app:popUpTo="@id/profileScreen"/>
     </fragment>
     <fragment
