--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="tangerine_two">#FFF29200</color>
     <color name="tangerine_two_disable">#FF804F05</color>
     <color name="cool_grey">#FF9A9AA1</color>
+    <color name="dark_grey">#1F2023</color>
 </resources>
