--- a/core/src/main/res/values/themes.xml
+++ b/core/src/main/res/values/themes.xml
@@ -25,15 +25,26 @@
         <item name="android:textSize">@dimen/sp_16</item>
         <item name="android:textColor">@color/white</item>
     </style>
-    
+
     <!--TextView Styles-->
     <style name="Base.Widget.AppCompat.TextView.Grey12" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">@dimen/sp_12</item>
         <item name="android:textColor">@color/cool_grey</item>
     </style>
+
     <style name="Base.Widget.AppCompat.TextView.Grey14" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">@dimen/sp_14</item>
         <item name="android:textColor">@color/cool_grey</item>
+    </style>
+
+    <style name="Base.Widget.AppCompat.TextView.TangerineTwo" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">@dimen/sp_14</item>
+        <item name="android:textColor">@color/tangerine_two</item>
+    </style>
+
+    <style name="Base.Widget.AppCompat.TextView.White18" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">@dimen/sp_18</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="Base.Widget.AppCompat.TextView.White22" parent="Widget.AppCompat.TextView">
