--- a/app/src/main/res/layout/promotions_screen.xml
+++ b/app/src/main/res/layout/promotions_screen.xml
@@ -58,4 +58,13 @@
         app:tabGravity="center"
         app:tabIndicatorHeight="0dp" />
 
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
