MenuScreen -> add animations

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -34,7 +34,11 @@
             app:destination="@id/reviewScreen" />
         <action
             android:id="@+id/action_main_screen_to_menuScreen"
-            app:destination="@id/menuScreen" />
+            app:destination="@id/menuScreen"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/action_main_screen_to_infoScreen"
             app:destination="@id/infoScreen" />
