--- a/ui/src/main/res/values/attrs.xml
+++ b/ui/src/main/res/values/attrs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <declare-styleable name="CustomEditText">
         <attr name="titleText" format="string" />
         <attr name="titleTextColor" format="color" />
@@ -11,11 +12,11 @@
         <attr name="editTextColor" format="color" />
         <attr name="editTextSize" format="dimension" />
         <attr name="enterType" format="enum">
-            <enum name="name" value="0"/>
-            <enum name="email" value="1"/>
-            <enum name="password" value="2"/>
-            <enum name="phone" value="3"/>
-            <enum name="date" value="4"/>
+            <enum name="name" value="0" />
+            <enum name="email" value="1" />
+            <enum name="password" value="2" />
+            <enum name="phone" value="3" />
+            <enum name="date" value="4" />
         </attr>
 
         <attr name="buttonText" format="string" />
@@ -26,6 +27,15 @@
         <attr name="lineSize" format="dimension" />
         <attr name="lineActiveColor" format="color" />
         <attr name="linePassiveColor" format="color" />
+    </declare-styleable>
+
+    <declare-styleable name="EditAmountView">
+        <attr name="minAmount" format="integer" />
+        <attr name="maxAmount" format="integer" />
+        <attr name="lineColor" format="color" />
+        <attr name="lineWidth" format="dimension" />
+        <attr name="textColor" format="color" />
+        <attr name="text" format="string" />
     </declare-styleable>
 
 </resources>
