--- a/app/src/main/res/layout/menu_recycler_holder.xml
+++ b/app/src/main/res/layout/menu_recycler_holder.xml
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="menu_recycler_holder_button_border,menu_recycler_holder_description,menu_recycler_holder_edit_amount_container,menu_recycler_holder_edit_amount,menu_recycler_holder_button_price"
+        app:constraint_referenced_ids="menu_recycler_holder_description,amount_view"
         tools:ignore="NotSibling" />
 
     <View
@@ -49,14 +49,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/bottom_barrier" />
 
-    <ImageView
+    <com.bav.ui.EditAmountView
+        android:id="@+id/amount_view"
+        android:layout_width="@dimen/dp_100"
+        android:layout_height="@dimen/dp_33"
+        android:layout_marginEnd="@dimen/dp_15"
+        app:minAmount="0"
+        app:maxAmount="100"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/menu_recycler_holder_title" />
+
+    <!--<ImageView
         android:id="@+id/menu_recycler_holder_button_border"
         android:layout_width="@dimen/dp_100"
         android:layout_height="@dimen/dp_33"
         android:layout_marginEnd="@dimen/dp_15"
         android:src="@drawable/button_price_border"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/menu_recycler_holder_title" />
+        app:layout_constraintTop_toBottomOf="@+id/menu_recycler_holder_title"
+        android:visibility="invisible"/>-->
 
     <TextView
         android:id="@+id/menu_recycler_holder_description"
@@ -66,26 +77,25 @@
         android:layout_marginEnd="@dimen/dp_12"
         android:maxLines="2"
         app:layout_constraintBottom_toBottomOf="@id/bottom_barrier"
-        app:layout_constraintEnd_toStartOf="@+id/menu_recycler_holder_button_border"
+        app:layout_constraintEnd_toStartOf="@+id/amount_view"
         app:layout_constraintStart_toStartOf="@id/menu_recycler_holder_title"
         app:layout_constraintTop_toBottomOf="@+id/menu_recycler_holder_title"
         tools:text="Классическое сочетание салатов Айсберг и креветками с курицей…" />
 
-    <FrameLayout
+    <!--<FrameLayout
         android:id="@+id/menu_recycler_holder_edit_amount_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="@+id/menu_recycler_holder_button_border"
         app:layout_constraintTop_toTopOf="@+id/menu_recycler_holder_button_border"
-        tools:visibility="visible">
+        android:visibility="invisible">
 
         <include
             android:id="@+id/menu_recycler_holder_edit_amount"
             layout="@layout/edit_amount_view" />
-    </FrameLayout>
+    </FrameLayout>-->
 
-    <TextView
+    <!--<TextView
         android:id="@+id/menu_recycler_holder_button_price"
         style="@style/Base.Widget.AppCompat.TextView.White16"
         android:layout_width="@dimen/dp_100"
@@ -94,6 +104,6 @@
         app:layout_constraintStart_toStartOf="@+id/menu_recycler_holder_button_border"
         app:layout_constraintTop_toTopOf="@+id/menu_recycler_holder_button_border"
         tools:text="P 200"
-        tools:visibility="invisible" />
+        tools:visibility="invisible" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
