--- a/core/src/main/res/values/themes.xml
+++ b/core/src/main/res/values/themes.xml
@@ -36,9 +36,22 @@
         <item name="android:textSize">@dimen/sp_14</item>
         <item name="android:textColor">@color/cool_grey</item>
     </style>
+    <style name="Base.Widget.AppCompat.TextView.Grey11" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">@dimen/sp_11</item>
+        <item name="android:textColor">@color/cool_grey</item>
+    </style>
+
+    <style name="Base.Widget.AppCompat.TextView.White14" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">@dimen/sp_14</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
     <style name="Base.Widget.AppCompat.TextView.TangerineTwo" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">@dimen/sp_14</item>
+        <item name="android:textColor">@color/tangerine_two</item>
+    </style>
+    <style name="Base.Widget.AppCompat.TextView.TangerineTwo16" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">@dimen/sp_16</item>
         <item name="android:textColor">@color/tangerine_two</item>
     </style>
 
@@ -56,6 +69,12 @@
     <style name="Widget.AppCompat.Button.MyRoundedButton" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/rounded_button_style</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/sp_14</item>
+    </style>
+
+    <style name="Widget.AppCompat.Button.ButtonStrokeBorder" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/stroke_border_button_selector</item>
+        <item name="android:textColor">@color/tangerine_two</item>
         <item name="android:textSize">@dimen/sp_14</item>
     </style>
 
