--- a/core/src/main/res/values/themes.xml
+++ b/core/src/main/res/values/themes.xml
@@ -71,6 +71,11 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/sp_14</item>
     </style>
+    <style name="Widget.AppCompat.Button.MyOrderButton" parent="Widget.AppCompat.Button">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/sp_14</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 
     <style name="Widget.AppCompat.Button.ButtonStrokeBorder" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/stroke_border_button_selector</item>
