--- a/app/src/main/res/layout/basket_screen.xml
+++ b/app/src/main/res/layout/basket_screen.xml
@@ -31,8 +31,7 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <FrameLayout
             android:layout_width="match_parent"
