--- a/core/src/main/res/values/themes.xml
+++ b/core/src/main/res/values/themes.xml
@@ -45,6 +45,10 @@
         <item name="android:textSize">@dimen/sp_14</item>
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="Base.Widget.AppCompat.TextView.White12" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">@dimen/sp_12</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
     <style name="Base.Widget.AppCompat.TextView.TangerineTwo" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">@dimen/sp_14</item>
@@ -52,6 +56,10 @@
     </style>
     <style name="Base.Widget.AppCompat.TextView.TangerineTwo16" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">@dimen/sp_16</item>
+        <item name="android:textColor">@color/tangerine_two</item>
+    </style>
+    <style name="Base.Widget.AppCompat.TextView.TangerineTwo22" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">@dimen/sp_22</item>
         <item name="android:textColor">@color/tangerine_two</item>
     </style>
 
