--- a/app/src/main/res/layout/create_order_screen.xml
+++ b/app/src/main/res/layout/create_order_screen.xml
@@ -24,11 +24,11 @@
             android:textColor="@android:color/white" />
     </androidx.appcompat.widget.Toolbar>
 
-    <androidx.core.widget.NestedScrollView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <FrameLayout
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -389,13 +389,13 @@
                     android:orientation="vertical"
                     app:layout_constraintGuide_end="@dimen/dp_30" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.core.widget.NestedScrollView>
 
-            <ProgressBar
-                android:id="@+id/progress"
-                android:layout_width="@dimen/dp_100"
-                android:layout_height="@dimen/dp_100"
-                android:layout_gravity="center"
-                android:visibility="invisible" />
-        </FrameLayout>
-    </androidx.core.widget.NestedScrollView>
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="@dimen/dp_100"
+            android:layout_height="@dimen/dp_100"
+            android:layout_gravity="center"
+            android:visibility="visible" />
+    </FrameLayout>
 </LinearLayout>
