--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -38,13 +38,19 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" />
+            app:popExitAnim="@anim/slide_out_right"
+            app:popUpTo="@id/main_screen" />
         <action
             android:id="@+id/action_main_screen_to_infoScreen"
             app:destination="@id/infoScreen" />
         <action
-            android:id="@+id/action_main_screen_to_restaurantsScreen"
-            app:destination="@id/restaurantsScreen" />
+            android:id="@+id/action_main_screen_to_restaurantsMapScreen"
+            app:destination="@id/restaurantsMapScreen"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            app:popUpTo="@id/main_screen" />
     </fragment>
     <fragment
         android:id="@+id/promotionsScreen"
@@ -65,7 +71,7 @@
     <fragment
         android:id="@+id/menuScreen"
         android:name="com.bav.wbapp.menu.MenuScreen"
-        android:label="MenuScreen" >
+        android:label="MenuScreen">
         <action
             android:id="@+id/action_menuScreen_to_basketScreen"
             app:destination="@id/basketScreen"
@@ -112,7 +118,7 @@
     <fragment
         android:id="@+id/basketScreen"
         android:name="com.bav.wbapp.basket.BasketScreen"
-        android:label="BasketScreen" >
+        android:label="BasketScreen">
         <action
             android:id="@+id/action_basketScreen_to_createOrderScreen"
             app:destination="@id/createOrderScreen"
@@ -125,18 +131,26 @@
     <fragment
         android:id="@+id/createOrderScreen"
         android:name="com.bav.wbapp.order.create.CreateOrderScreen"
-        android:label="CreateOrderScreen" >
+        android:label="CreateOrderScreen">
         <argument
             android:name="price"
-            app:argType="integer"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            app:argType="integer" />
         <argument
             android:name="guestsAmount"
-            app:argType="integer"
-            android:defaultValue="1" />
+            android:defaultValue="1"
+            app:argType="integer" />
         <action
             android:id="@+id/action_createOrderScreen_to_applyOrderScreen"
             app:destination="@id/applyOrderScreen"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            app:popUpTo="@id/createOrderScreen" />
+        <action
+            android:id="@+id/action_createOrderScreen_to_restaurantsMapScreen"
+            app:destination="@id/restaurantsMapScreen"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
@@ -149,12 +163,12 @@
         android:label="ApplyOrderScreen">
         <argument
             android:name="price"
-            app:argType="integer"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            app:argType="integer" />
         <argument
             android:name="guestsAmount"
-            app:argType="integer"
-            android:defaultValue="1" />
+            android:defaultValue="1"
+            app:argType="integer" />
         <argument
             android:name="name"
             app:argType="string" />
@@ -164,7 +178,7 @@
         <argument
             android:name="address"
             app:argType="string"
-            app:nullable="true"/>
+            app:nullable="true" />
         <argument
             android:name="date"
             app:argType="string"
@@ -182,7 +196,7 @@
     <fragment
         android:id="@+id/orderCreatedScreen"
         android:name="com.bav.wbapp.order.created.OrderCreatedScreen"
-        android:label="OrderCreatedScreen" >
+        android:label="OrderCreatedScreen">
         <argument
             android:name="orderNum"
             app:argType="string" />
@@ -191,5 +205,9 @@
             app:argType="string"
             app:nullable="true" />
     </fragment>
+    <fragment
+        android:id="@+id/restaurantsMapScreen"
+        android:name="com.bav.wbapp.restaurants.RestaurantsMapScreen"
+        android:label="RestaurantsMapScreen" />
 
 </navigation>
